syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "MCB.Demos.Orders.Microservices.Orders.Ports.GRPCService.Protos.ImportOrder";

package order;

service Orders {
	rpc ImportOrder (ImportOrderRequest) returns (ImportOrderReply);
}

message ImportOrderRequest {
	Order order = 1;
}

message ImportOrderReply {
	bool success  = 1;
}

message Order {
	string code = 1;
	google.protobuf.Timestamp date = 2;
	Customer customer = 3;
	repeated OrderItem orderItemArray  = 4;
}

message OrderItem{
	int32 sequence = 1;
	double quantity = 2;
	double value = 3;
	Product product = 4;
}

message Customer {
	string code = 1;
	string name = 2;
}

message Product {
	string code = 1;
	string name = 2;
}
